--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "root",
+  "name": "@workspace/root",
   "private": true,
   "devDependencies": {
-    "lerna": "6.6.0"
+    "lerna": "7.0.0"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
